--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <div class="contain2">
         <img src="rafc.png" alt="myself" width=" 175px">
         <table>
-            <tr>
+            <!-- <tr>
                 <th></th>
-                <th>contact</th>
-            </tr>
+                <th></th>
+            </tr> -->
             <tr>
                 <td><i class="far fa-envelope"></i></td>
                 <td>Claessens.raf92@gamil.com</td>
@@ -48,7 +48,7 @@
     <div class="daddy">
         <div class="bodytekstleft">
             <div class="plate">
-                <p class="script"><span>Wie ben ik?</span></p>
+                <p class="script"><span>Who am i?</span></p>
                 </p>
               </div>            <p>Amet accusam amet vero accusam takimata. Ea est sed aliquyam sadipscing ut elitr, ea aliquyam rebum ut
                 sea elitr vero. Aliquyam labore takimata sanctus voluptua. Sadipscing erat ea amet accusam voluptua
@@ -56,7 +56,7 @@
                 tempor ipsum consetetur sit et,</p>
         </div>
         <div class="bodytekstright">
-            <h1>Voorkeuren</h1>
+            <h1>Preferences</h1>
             <table>
                 <!-- <tr>
                     <th>Language</th>
