--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 
 </head>
@@ -19,9 +20,8 @@
         <center>
             <p>
                 <span class="line">ℂ𝕝𝕒𝕖𝕤𝕤𝕖𝕟𝕤 ℝ𝕒𝕗</span><br>
-                ⓙⓤⓝⓘⓞⓡ ⓦⓔⓑⓓⓔⓥⓔⓛⓞⓟⓔⓡ </p>
-            <a href="https://www.linkedin.com/in/raf-claessens-723b07178/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
-            <a href="https://github.com/RafClaessens" target="_blank"> <i class="fab fa-github fa-3x"></i> </a>
+               <span class="fontje"> Junior Webdeveloper </span></p>
+
         </center>
     </div>
     <div class="contain2">
@@ -33,7 +33,7 @@
             </tr> -->
             <tr>
                 <td><i class="far fa-envelope"></i></td>
-                <td>Claessens.raf92@gamil.com</td>
+                <td>Claessens.raf92@gmail.com</td>
             </tr>
             <tr>
                 <td><i class="fas fa-mobile-alt"></i></td>
@@ -86,7 +86,9 @@
         </div>
     </div>
         <div>
-    <a class="button" href="" target="_blank">Link To Cv</a></div>
+    <a class="button" href="" target="_blank">Link To Cv</a>
+    <a class="contain5"href="https://www.linkedin.com/in/raf-claessens-723b07178/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+    <a class="contain5" href="https://github.com/RafClaessens" target="_blank"> <i class="fab fa-github fa-3x"></i> </a></div>
 </div>
 </body>
 
