--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             </table>
         </div>
     </div>
-        <div>
-    <a class="button" href="" target="_blank">Link To Cv</a>
+        <div><nav>
+    <a class="button" href="https://rafclaessens.github.io/BoxFloatsFLex/" target="_blank">Link To Cv</a>
     <a class="contain5"href="https://www.linkedin.com/in/raf-claessens-723b07178/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
-    <a class="contain5" href="https://github.com/RafClaessens" target="_blank"> <i class="fab fa-github fa-3x"></i> </a></div>
+    <a class="contain5" href="https://github.com/RafClaessens" target="_blank"> <i class="fab fa-github fa-3x"></i> </a></nav></div>
 </div>
 </body>
 
