--- a/index.html
+++ b/index.html
@@ -8,88 +8,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
 
 </head>
 
 <body>
-    
-<div class="borderX">
-    <div class="contain1">
-        <center>
-            <p>
-                <span class="line">ℂ𝕝𝕒𝕖𝕤𝕤𝕖𝕟𝕤 ℝ𝕒𝕗</span><br>
-               <span class="fontje"> Junior Webdeveloper </span></p>
 
-        </center>
-    </div>
-    <div class="contain2">
-        <img src="rafc.png" alt="myself" width=" 175px">
-        <table>
-            <!-- <tr>
+    <div class="borderX">
+        <div class="contain1">
+            <center>
+                <p>
+                    <span class="line">ℂ𝕝𝕒𝕖𝕤𝕤𝕖𝕟𝕤 ℝ𝕒𝕗</span><br>
+                    <span class="fontje"> Junior Webdeveloper </span></p>
+
+            </center>
+        </div>
+        <div class="contain2">
+            <img src="rafc.png" alt="myself" width=" 175px">
+            <table>
+                <!-- <tr>
                 <th></th>
                 <th></th>
             </tr> -->
-            <tr>
-                <td><i class="far fa-envelope"></i></td>
-                <td>Claessens.raf92@gmail.com</td>
-            </tr>
-            <tr>
-                <td><i class="fas fa-mobile-alt"></i></td>
-                <td>(+32)0484 61 61 95</td>
-            </tr>
-            <tr>
-                <td><i class="fas fa-map-marked-alt"></i></td>
-                <td>België, Limburg,<br> 3630 Maasmechelen</td>
-            </tr>
-        </table>
-    </div>
-    <div class="daddy">
-        <div class="bodytekstleft">
-            <div class="plate">
-                <p class="script"><span>Who am i?</span></p>
-                </p>
-              </div>            <p>Amet accusam amet vero accusam takimata. Ea est sed aliquyam sadipscing ut elitr, ea aliquyam rebum ut
-                sea elitr vero. Aliquyam labore takimata sanctus voluptua. Sadipscing erat ea amet accusam voluptua
-                vero sit dolores sea, tempor invidunt nonumy diam eos. Aliquyam sit stet lorem elitr sed rebum amet, no
-                tempor ipsum consetetur sit et,</p>
-        </div>
-        <div class="bodytekstright">
-            <h1>Preferences</h1>
-            <table>
-                <!-- <tr>
-                    <th>Language</th>
-                    <th>Preference</th>
-                </tr> -->
                 <tr>
-                    <td>html</td>
-                    <td>&#9733;&#9733;&#9733;&#9733;&#9733;</td>
+                    <td><i class="far fa-envelope"></i></td>
+                    <td>Claessens.raf92@gmail.com</td>
                 </tr>
                 <tr>
-                    <td>css</td>
-                    <td>&#9733;&#9733;&#9733;&#9733;&#9733;</td>
+                    <td><i class="fas fa-mobile-alt"></i></td>
+                    <td>(+32)0484 61 61 95</td>
                 </tr>
                 <tr>
-                    <td>JS</td>
-                    <td>&#9733;&#9733;&#9733;&#9733;&#9734;</td>
-                </tr>
-                <tr>
-                    <td>PHP</td>
-                    <td>&#9733;&#9733;&#9734;&#9734;&#9734;</td>
-                </tr>
-                <tr>
-                    <td>Other</td>
-                    <td>(in progress)</td>
+                    <td><i class="fas fa-map-marked-alt"></i></td>
+                    <td>België, Limburg,<br> 3630 Maasmechelen</td>
                 </tr>
             </table>
         </div>
+        <div class="daddy">
+            <div class="bodytekstleft">
+                <div class="plate">
+                    <p class="script"><span>Who am i?</span></p>
+                    </p>
+                </div>
+                <p class="fontj2">Amet accusam amet vero accusam takimata. Ea est sed aliquyam sadipscing ut elitr, ea aliquyam rebum
+                    ut
+                    sea elitr vero. Aliquyam labore takimata sanctus voluptua. Sadipscing erat ea amet accusam voluptua
+                    vero sit dolores sea, tempor invidunt nonumy diam eos. Aliquyam sit stet lorem elitr sed rebum
+                    amet, no
+                    tempor ipsum consetetur sit et,</p>
+            </div>
+            <div class="bodytekstright">
+                <h1>Preferences</h1>
+                <table>
+                    <!-- <tr>
+                    <th>Language</th>
+                    <th>Preference</th>
+                </tr> -->
+                    <tr>
+                        <td>html</td>
+                        <td>&#9733;&#9733;&#9733;&#9733;&#9733;</td>
+                    </tr>
+                    <tr>
+                        <td>css</td>
+                        <td>&#9733;&#9733;&#9733;&#9733;&#9733;</td>
+                    </tr>
+                    <tr>
+                        <td>JS</td>
+                        <td>&#9733;&#9733;&#9733;&#9733;&#9734;</td>
+                    </tr>
+                    <tr>
+                        <td>PHP</td>
+                        <td>&#9733;&#9733;&#9734;&#9734;&#9734;</td>
+                    </tr>
+                    <tr>
+                        <td>Other</td>
+                        <td>(in progress)</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div>
+            <nav>
+                <a class="button" href="https://rafclaessens.github.io/BoxFloatsFLex/" target="_blank">Link To Cv</a>
+                <a class="contain5" href="https://www.linkedin.com/in/raf-claessens-723b07178/" target="_blank"><i
+                        class="fab fa-linkedin fa-3x"></i></a>
+                <a class="contain5" href="https://github.com/RafClaessens" target="_blank"> <i class="fab fa-github fa-3x"></i>
+                </a></nav>
+        </div>
     </div>
-        <div><nav>
-    <a class="button" href="https://rafclaessens.github.io/BoxFloatsFLex/" target="_blank">Link To Cv</a>
-    <a class="contain5"href="https://www.linkedin.com/in/raf-claessens-723b07178/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
-    <a class="contain5" href="https://github.com/RafClaessens" target="_blank"> <i class="fab fa-github fa-3x"></i> </a></nav></div>
-</div>
 </body>
 
 </html>
