--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                     ut
                     sea elitr vero. Aliquyam labore takimata sanctus voluptua. Sadipscing erat ea amet accusam voluptua
                     vero sit dolores sea, tempor invidunt nonumy diam eos. Aliquyam sit stet lorem elitr sed rebum
-                    amet, no
-                    tempor ipsum consetetur sit et,</p>
+                    amet, </p>
             </div>
             <div class="bodytekstright">
                 <h1>Preferences</h1>
