--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 
 </head>
 
@@ -20,9 +21,8 @@
         <div class="contain1">
             <center>
                 <p>
-                    <span class="line">ℂ𝕝𝕒𝕖𝕤𝕤𝕖𝕟𝕤 ℝ𝕒𝕗</span><br>
+                    <span class="line">Claessens Raf</span><br>
                     <span class="fontje"> Junior Webdeveloper </span></p>
-
             </center>
         </div>
         <div class="contain2">
@@ -34,7 +34,7 @@
             </tr> -->
                 <tr>
                     <td><i class="far fa-envelope"></i></td>
-                    <td>Claessens.raf92@gmail.com</td>
+                    <td><a href="https://mail.google.com/mail/u/0/#inbox">Claessens.raf92@gmail.com</a></td>
                 </tr>
                 <tr>
                     <td><i class="fas fa-mobile-alt"></i></td>
